--- a/src/public/auth/index.html
+++ b/src/public/auth/index.html
@@ -142,7 +142,8 @@
         })
       });
       const json = await res.json();
-      localStorage.setItem('session', json.sesh);
+      console.log(json, "login")
+      localStorage.setItem('session', JSON.stringify(json.sesh));
       document.getElementById('login-response').textContent = JSON.stringify(json);
     }
 
@@ -155,7 +156,9 @@
           password: document.getElementById('register-password').value
         })
       });
-      document.getElementById('register-response').textContent = await res.text();
+      const json = await res.json();
+      console.log(json, "register")
+      document.getElementById('register-response').textContent = JSON.stringify(json)
     }
   </script>
 
