--- a/src/public/dashboard/dashboard.html
+++ b/src/public/dashboard/dashboard.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>dashboard</title>
-    <link rel="stylesheet" href="./main.css" > 
+    <link rel="stylesheet" href="./main.css" >
+    <script type="module" src="../js/RSAutils.js"></script>
   </head>
   <body>
     <div class="app">
